--- a/index.html
+++ b/index.html
@@ -237,10 +237,10 @@
 <h3>Energy Healing</h3>
 <div class="price">$60</div>
 <div class="meta">30 minutes</div>
-<a class="btn" href="https://calendly.com/YOUR_LINK/energy-30">Book 30 min</a>
+<a class="btn" href="https://calendly.com/theesotericnomad/30min">Book 30 min</a>
 <div class="price" style="margin-top:18px;">$100</div>
 <div class="meta">60 minutes</div>
-<a class="btn" href="https://calendly.com/YOUR_LINK/energy-60">Book 60 min</a>
+<a class="btn" href="https://calendly.com/theesotericnomad/1-hour-1-1-meeting">Book 60 min</a>
 </div>
 <div class="card">
 <h3>BQH Hypnosis</h3>
@@ -249,7 +249,7 @@
 <p style="margin-top:10px; color:var(--muted); font-size:14px;">
           Session preparation instructions are provided after booking.
         </p>
-<a class="btn" href="https://calendly.com/YOUR_LINK/bqh">Book BQH Session</a>
+<a class="btn" href="https://calendly.com/theesotericnomad/beyond-quantum-healing-hypnosis-session">Book BQH Session</a>
 </div>
 </div>
 </section><section id="testimonials"><h2>Testimonials</h2><div class="gallery"><div class="thumb"><img alt="Client feedback screenshot" src="assets/review1.png"/><div class="caption">“Man I really feel better now!”</div></div><div class="thumb"><img alt="Client feedback screenshot" src="assets/review2.png"/><div class="caption">"I'm fascinated by this as I feel so good."</div></div><div class="thumb"><img alt="Client feedback screenshot" src="assets/review3.png"/><div class="caption">“I feel better after the session.”</div></div><div class="thumb"><img alt="Client feedback screenshot" src="assets/review4.png"/><div class="caption">“I feel so much better... I thought he was the one. But I'm feeling like I could move on now.”</div></div><div class="thumb"><img alt="Client feedback screenshot" src="assets/review5.png"/><div class="caption">"So far my mood is boosted and I did well on my two college exams."</div></div><div class="thumb"><img alt="Client feedback screenshot" src="assets/review6.png"/><div class="caption">“You definitely have a gift.”</div></div></div></section><section id="credentials"><h2>Credentials</h2><div class="split"><div class="card"><h3>BQH Accreditation</h3><p class="meta">Beyond Quantum Healing (BQH) — Certificate of Completion</p></div><div><img alt="BQH Certificate" class="certimg" src="assets/BQH_Certificate.jpg"/></div></div></section>
