--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1" name="viewport"/>
-<title>Nathan Soufer — Energy Healing &amp; BQH Hypnosis</title>
+<title>Nathan Soufer — Energy Healing &amp; BQH Hypnosis Services</title>
 <meta content="Energy healing and BQH hypnosis sessions with transparent pricing." name="description"/>
 <style>
     :root{
