Fix title again

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1" name="viewport"/>
-<title>Nathan Soufer — Energy Healing &amp; BQH Hypnosis Services</title>
+<title>Nathan Soufer — Energy Healing &amp; BQH Hypnosis</title>
 <meta content="Energy healing and BQH hypnosis sessions with transparent pricing." name="description"/>
 <style>
     :root{
@@ -189,7 +189,7 @@
 </nav>
 <main class="wrap">
 <header>
-<h1>Energy Healing &amp; Quantum Hypnosis</h1>
+<h1>Energy Healing &amp; Quantum Hypnosis Services</h1>
 <p class="sub">
     Hi, I’m Nathan, also known as <a href="https://www.instagram.com/the.esoteric.nomad/">@the.esoteric.nomad</a>.<br><br>
 
