--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 </nav>
 <main class="wrap">
 <header>
-<h1>Energy Healing &amp; Quantum Hypnosis Services</h1>
+<h1>Energy Healing &amp; Quantum Hypnosis</h1>
 <p class="sub">
     Hi, I’m Nathan, also known as <a href="https://www.instagram.com/the.esoteric.nomad/">@the.esoteric.nomad</a>.<br><br>
 
@@ -216,7 +216,7 @@
 </ul>
 </div>
 <div class="card">
-<h3>Beyond Quantum Hypnosis</h3>
+<h3>Beyond Quantum Healing Hypnosis</h3>
 <p class="meta">Connect with your higher self • Learn your soul mission</p>
 <p>
           A hypnosis session to help you connect with your higher self to receive healing as well as to gain clarity on your life purpose. I’m an accredited practitioner.
@@ -243,7 +243,7 @@
 <a class="btn" href="https://calendly.com/theesotericnomad/1-hour-1-1-meeting">Book 60 min</a>
 </div>
 <div class="card">
-<h3>BQH Hypnosis</h3>
+<h3>Beyond Quantum Healing Hypnosis</h3>
 <div class="price">$444</div>
 <div class="meta">Deep-dive session</div>
 <p style="margin-top:10px; color:var(--muted); font-size:14px;">
