Reduce margins again on mobile

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   .credrow{
     grid-template-columns: 1fr;
     gap: 8px;          /* space between image and its card */
-    margin: 14px 0;     /* space between credential pairs */
+    margin: 12px 0;     /* space between credential pairs */
   }
 
   /* kill any extra spacing that might be coming from defaults */
@@ -368,7 +368,7 @@
   </div>
   <div class="card">
     <h3>Reiki Certificate</h3>
-    <p class="meta">While I do not use Reiki as a formal system in my work, I have received Reiki Level I training and attunement.</p>
+    <p class="meta">While I do not use standardized Reiki methods as a formal system in my work, I have received Reiki Level I training and attunement.</p>
   </div>
 </div>
 
