Add timing for bqh

--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
 <div class="card">
 <h3>Beyond Quantum Healing Hypnosis</h3>
 <div class="price">$444</div>
-<div class="meta">Deep-dive session</div>
+<div class="meta">2-4 hours</div>
 <p style="margin-top:10px; color:var(--muted); font-size:14px;">
           Session preparation instructions are provided after booking.
         </p>
