--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1" name="viewport"/>
-<title>Nathan Soufer — Energy Healing &amp; BQH Hypnosis</title>
+<title>Nathan Soufer — Energy Healing &amp; Soul Alignment</title>
 <meta content="Energy healing and BQH hypnosis sessions with transparent pricing." name="description"/>
 <style>
     :root{
@@ -300,7 +300,7 @@
 </nav>
 <main class="wrap">
 <header>
-<h1>Energy Healing &amp; Quantum Hypnosis</h1>
+<h1>Energy Healing &amp; Soul Alignment</h1>
 <p class="sub">
     Hi, I’m Nathan, also known as <a href="https://www.instagram.com/the.esoteric.nomad/">@the.esoteric.nomad</a>.<br><br>
 
@@ -406,7 +406,7 @@
 <footer>
 <div>
 <strong>Nathan Soufer</strong><br/>
-      Energy Healing &amp; BQH Hypnosis
+      Energy Healing &amp; Soul Alignment
     </div>
 <div>© <span id="year"></span></div>
 </footer>
