--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
 <h3>Soul Purpose Mentorship (Long-Term)</h3>
 <p class="meta">BQH + shadow work • deprogramming • manifestation alignment • <strong>by application</strong></p>
 <p>
-          A longer-term mentorship combining BQH sessions with ongoing support to clear subconscious blocks, integrate shadow material, heal emotional wounds, and step into a clear, soul-aligned life direction.
+          A longer-term mentorship combining Beyond Quantum Healing (BQH) sessions with ongoing support to clear subconscious blocks, integrate shadow material, heal emotional wounds, and step into a clear, soul-aligned life direction.
         </p>
 <ul>
 <li>Start with BQH for clarity</li>
