--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-
 <html lang="en">
 <head>
-<meta charset="utf-8"/>
-<meta content="width=device-width, initial-scale=1" name="viewport"/>
-<title>Nathan Soufer — Energy Healing &amp; Soul Alignment</title>
-<meta content="Energy healing and BQH hypnosis sessions with transparent pricing." name="description"/>
-<style>
+  <meta charset="utf-8"/>
+  <meta content="width=device-width, initial-scale=1" name="viewport"/>
+  <title>Nathan Soufer — Energy Healing &amp; Soul Alignment</title>
+  <meta content="Energy healing and BQH hypnosis sessions with transparent pricing." name="description"/>
+
+  <style>
     :root{
       --bg:#ffffff;
       --text:#0f172a;
@@ -18,103 +18,6 @@
       --max:1000px;
       --shadow: 0 8px 24px rgba(15,23,42,.06);
     }
-
-    /* two-column row */
-/* make image column smaller than text */
-.split.cred{
-  grid-template-columns: 0.95fr 1.05fr; /* tweak: 0.9/1.1 if you want smaller */
-  align-items: center;
-}
-
-.credrow{
-  display:grid;
-  grid-template-columns: 480px 1fr; /* was bigger—drop to 480/460 */
-  gap: 32px;
-  align-items:center;
-  margin: 26px 0;
-}
-@media (max-width: 900px){
-  .credrow{ grid-template-columns: 1fr; }
-}
-
-
-/* Mobile: keep each image + caption card feeling like one unit */
-@media (max-width: 900px){
-  .credrow{
-    grid-template-columns: 1fr;
-    gap: 8px;          /* space between image and its card */
-    margin: 12px 0;     /* space between credential pairs */
-  }
-
-  /* kill any extra spacing that might be coming from defaults */
-  .credrow .certbox{ margin: 0; }
-  .credrow .card{ margin: 0; }
-}
-
-@media (max-width: 900px){
-  .credrow{ gap: 8px; margin: 14px 0; }
-}
-
-.credrow .card{ max-width: 560px; }
-
-/* hard cap so it never gets huge on wide screens */
-.split.cred .certbox{
-  max-width: 400px;   /* lower this to shrink (e.g. 520px) */
-}
-
-/* keep the image responsive inside the cap */
-.split.cred .certimg{
-  width: 100%;
-  height: auto;
-  display: block;
-}
-/* image card */
-.certbox{
-  padding: 0;
-  overflow: hidden;
-  border-radius: 16px;
-  box-shadow: 0 10px 30px rgba(0,0,0,.08);
-}
-
-.certimg{
-  width: 100%;
-  height: auto;
-  display: block;
-}
-
-/* optional: keep your zoom for Reiki */
-.certbox--reiki .certimg{
-  transform: scale(1.2);
-  transform-origin: center;
-}
-
-/* mobile: stack nicely */
-@media (max-width: 860px){
-  .split.cred{
-    grid-template-columns: 1fr;
-  }
-}
-
-
-/* image card should have zero padding + clip overflow */
-.certbox{
-  padding: 0;
-  overflow: hidden;
-  border-radius: 16px;
-}
-
-/* ensure image truly fills the box */
-.certbox .certimg{
-  width: 100%;
-  height: auto;
-  display: block;
-}
-
-/* zoom Reiki slightly to remove side whitespace */
-.certbox--reiki .certimg{
-  transform: scale(1.2);
-  transform-origin: center;
-}
 
     *{box-sizing:border-box}
     body{
@@ -134,10 +37,7 @@
       text-underline-offset: 3px;
       font-weight: 600;
     }
-
-    .sub a:hover {
-      opacity: 0.8;
-    }
+    .sub a:hover { opacity: 0.8; }
 
     nav{
       position:sticky;
@@ -145,6 +45,7 @@
       background:rgba(255,255,255,.9);
       backdrop-filter: blur(8px);
       border-bottom:1px solid var(--line);
+      z-index: 10;
     }
     .navinner{
       max-width:var(--max);
@@ -182,9 +83,9 @@
     }
 
     .creator{
-  font-weight: 800;
-  font-style: normal; /* prevents italics from affecting the word */
-} 
+      font-weight: 800;
+      font-style: normal;
+    }
 
     .grid{
       display:grid;
@@ -203,11 +104,6 @@
       box-shadow:var(--shadow);
     }
 
-    .price{
-      font-size:28px;
-      font-weight:900;
-      margin:10px 0 4px;
-    }
     .meta{color:var(--muted); font-size:14px}
 
     ul{
@@ -218,7 +114,6 @@
 
     .btn{
       display:inline-block;
-      margin-top:12px;
       padding:12px 16px;
       border-radius:12px;
       border:1px solid var(--line);
@@ -227,6 +122,24 @@
     }
     .btn:hover{background:#fff}
 
+    /* Price badge + button row (inside service cards) */
+    .badge{
+      display:inline-block;
+      margin-top:12px;
+      padding:6px 10px;
+      border:1px solid var(--line);
+      border-radius:999px;
+      background:var(--soft);
+      font-weight:800;
+      font-size:13px;
+      color:var(--text);
+    }
+    .btnrow{
+      display:flex;
+      gap:10px;
+      flex-wrap:wrap;
+      margin-top:10px;
+    }
 
     footer{
       margin-top:72px;
@@ -238,7 +151,6 @@
       justify-content:space-between;
       flex-wrap:wrap;
     }
-  
 
     .gallery{
       display:grid;
@@ -266,153 +178,203 @@
       color:var(--muted);
       font-size:13px;
     }
-    .split{
-      display:grid;
-      grid-template-columns: 1.2fr .8fr;
-      gap:16px;
-      align-items:start;
+
+    /* Credentials layout */
+    .split.cred{
+      grid-template-columns: 0.95fr 1.05fr;
+      align-items: center;
     }
-    @media(max-width:900px){ .split{grid-template-columns:1fr;} }
+
+    .credrow{
+      display:grid;
+      grid-template-columns: 480px 1fr;
+      gap: 32px;
+      align-items:center;
+      margin: 26px 0;
+    }
+    @media (max-width: 900px){
+      .credrow{ grid-template-columns: 1fr; }
+    }
+
+    /* Mobile: keep each image + caption card feeling like one unit */
+    @media (max-width: 900px){
+      .credrow{
+        grid-template-columns: 1fr;
+        gap: 8px;
+        margin: 14px 0;
+      }
+      .credrow .certbox{ margin: 0; }
+      .credrow .card{ margin: 0; }
+    }
+
+    .credrow .card{ max-width: 560px; }
+
+    /* hard cap so it never gets huge on wide screens */
+    .split.cred .certbox{
+      max-width: 400px;
+    }
+
+    /* image card */
+    .certbox{
+      padding: 0;
+      overflow: hidden;
+      border-radius: 16px;
+      box-shadow: 0 10px 30px rgba(0,0,0,.08);
+    }
+
     .certimg{
       width:100%;
       height:auto;
+      display:block;
       border:1px solid var(--line);
       border-radius:12px;
       box-shadow: var(--shadow);
       background:#fff;
     }
 
-  /* Make the last Services card span both columns for an even layout */
-  #services .grid > .card:last-child{
-    grid-column: 1 / -1;
-    max-width: 760px;
-    justify-self: center;
-  }
+    /* zoom Reiki slightly to remove side whitespace */
+    .certbox--reiki .certimg{
+      transform: scale(1.2);
+      transform-origin: center;
+    }
 
-</style>
+    /* Make the last Services card span both columns for an even layout */
+    #services .grid > .card:last-child{
+      grid-column: 1 / -1;
+      max-width: 760px;
+      justify-self: center;
+    }
+  </style>
 </head>
+
 <body>
-<nav>
-<div class="navinner">
-<div class="brand">Nathan Soufer</div>
-<div class="navlinks"><a href="#services">Services</a><a href="#pricing">Pricing</a><a href="#testimonials">Testimonials</a><a href="#credentials">Credentials</a></div>
-</div>
-</nav>
-<main class="wrap">
-<header>
-<h1>Energy Healing &amp; Soul Alignment</h1>
-<p class="sub">
-    Hi, I’m Nathan, also known as <a href="https://www.instagram.com/the.esoteric.nomad/">@the.esoteric.nomad</a>.<br><br>
-
-    I am well-versed in various <b>energy healing modalities</b> and have done many sessions with positive feedback and testimonials.<br><br>
-
-    I’m also an accredited <b>BQH (Beyond Quantum Healing)</b> practitioner.<br><br>
-
-    I’m very passionate about helping people <b>heal</b>, <b>unlock the best versions of themselves</b>, and <b>step into their soul purpose</b>.
-    </p>
-</header>
-<section id="services">
-<h2>Services</h2>
-<div class="grid">
-<div class="card">
-<h3>Energy Healing &amp; Manifestation</h3>
-<p class="meta">Heal from trauma • Unlock love &amp; abundance</p>
-<p>
-          A 1:1 session with me designed to help clear energetic blockages, cut cords, manifest love &amp; abundance, and heal from emotional and physical issues.
-        </p>
-<ul>
-<li>Help heal from emotional &amp; physical wounds</li>
-<li>Cut toxic ties holding you back</li>
-<li>Help manifest love &amp; abundance</li>
-</ul>
-</div>
-<div class="card">
-<h3>Beyond Quantum Healing Hypnosis</h3>
-<p class="meta">Connect with your higher self • Learn your soul mission</p>
-<p>
-          A hypnosis session to help you connect with your higher self to receive healing as well as to gain clarity on your life purpose. I’m an accredited practitioner.
-        </p>
-<ul>
-<li>Ask questions to your higher self</li>
-<li>Help understand your soul mission</li>
-<li>Help understand what's blocking you from abundance</li>
-<li>Receive healing</li>
-</ul>
-</div>
-
-<div class="card">
-<h3>Soul Purpose Mentorship (Long-Term)</h3>
-<p class="meta">BQH + shadow work • deprogramming • manifestation alignment • <strong>by application</strong></p>
-<p>
-          A longer-term mentorship combining Beyond Quantum Healing (BQH) sessions with ongoing support to clear subconscious blocks, integrate shadow material, heal emotional wounds, and step into a clear, soul-aligned life direction.
-        </p>
-<ul>
-<li>Start with BQH for clarity</li>
-<li>Ongoing integration, shadow work, & healing</li>
-<li>Deprogramming & manifestation techniques</li>
-<li><em>Optional:</em> If you're a <strong class="creator">creator</strong> (or wish to be one), I can also help translate your clarity into a consistent content creation plan that is geared to succeed.</li>
-</ul>
-<a class="btn" href="https://calendly.com/theesotericnomad/soul-purpose-mentorship-fit-call">Apply for Mentorship</a>
-</div>
-
-</div>
-</section>
-<section id="pricing">
-<h2>Pricing</h2>
-<div class="grid">
-<div class="card">
-<h3>Energy Healing</h3>
-<div class="price">$60</div>
-<div class="meta">30 minutes</div>
-<a class="btn" href="https://calendly.com/theesotericnomad/30min">Book 30 min</a>
-<div class="price" style="margin-top:18px;">$100</div>
-<div class="meta">60 minutes</div>
-<a class="btn" href="https://calendly.com/theesotericnomad/1-hour-1-1-meeting">Book 60 min</a>
-</div>
-<div class="card">
-<h3>Beyond Quantum Healing Hypnosis</h3>
-<div class="price">$444</div>
-<div class="meta">2-4 hours</div>
-<p style="margin-top:10px; color:var(--muted); font-size:14px;">
-          Session preparation instructions are provided after booking.
-        </p>
-<a class="btn" href="https://calendly.com/theesotericnomad/beyond-quantum-healing-hypnosis-session">Book BQH Session</a>
-</div>
-</div>
-</section><section id="testimonials"><h2>Testimonials</h2><div class="gallery"><div class="thumb"><img alt="Client feedback screenshot" src="assets/review1.png"/><div class="caption">“Man I really feel better now. Thank you again!”</div></div><div class="thumb"><img alt="Client feedback screenshot" src="assets/review2.png"/><div class="caption">"I'm fascinated by this as I feel so good."</div></div><div class="thumb"><img alt="Client feedback screenshot" src="assets/review3.png"/><div class="caption">"I do feel much happier now, more relaxed too. I started visualizing a few things as well."</div></div><div class="thumb"><img alt="Client feedback screenshot" src="assets/review4.png"/><div class="caption">"I really needed your help today. Thank you for making time, I feel a lot better and clear minded."</div></div><div class="thumb"><img alt="Client feedback screenshot" src="assets/review5.png"/><div class="caption">"So far my mood is boosted and I did well on my two college exams."</div></div><div class="thumb"><img alt="Client feedback screenshot" src="assets/review6.png"/><div class="caption">“You definitely have a gift.”</div></div></div></section><section id="credentials">
-<h2>Credentials</h2>
-
-<div class="credrow">
-  <div class="certbox">
-    <img class="certimg" src="assets/BQH_Certificate.jpg" alt="BQH Certificate" />
-  </div>
-  <div class="card">
-    <h3>BQH Accreditation</h3>
-    <p class="meta">Beyond Quantum Healing (BQH) — Certificate of Completion</p>
-  </div>
-</div>
-
-<div class="credrow">
-  <div class="certbox certbox--reiki">
-    <img class="certimg" src="assets/Reiki_Certificate.png" alt="Reiki Certificate" />
-  </div>
-  <div class="card">
-    <h3>Reiki Certificate</h3>
-    <p class="meta">While I do not use standardized Reiki methods as a formal system in my work, I have received Reiki Level I training and attunement.</p>
-  </div>
-</div>
-
-</section>
-<footer>
-<div>
-<strong>Nathan Soufer</strong><br/>
-      Energy Healing &amp; Soul Alignment
+  <nav>
+    <div class="navinner">
+      <div class="brand">Nathan Soufer</div>
+      <div class="navlinks">
+        <a href="#services">Services</a>
+        <a href="#testimonials">Testimonials</a>
+        <a href="#credentials">Credentials</a>
+      </div>
     </div>
-<div>© <span id="year"></span></div>
-</footer>
-</main>
-<script>
-  document.getElementById("year").textContent = new Date().getFullYear();
-</script>
+  </nav>
+
+  <main class="wrap">
+    <header>
+      <h1>Energy Healing &amp; Soul Alignment</h1>
+      <p class="sub">
+        Hi, I’m Nathan, also known as <a href="https://www.instagram.com/the.esoteric.nomad/">@the.esoteric.nomad</a>.<br><br>
+
+        I am well-versed in various <b>energy healing modalities</b> and have done many sessions with positive feedback and testimonials.<br><br>
+
+        I’m also an accredited <b>BQH (Beyond Quantum Healing)</b> practitioner.<br><br>
+
+        I’m very passionate about helping people <b>heal</b>, <b>unlock the best versions of themselves</b>, and <b>step into their soul purpose</b>.
+      </p>
+    </header>
+
+    <section id="services">
+      <h2>Services</h2>
+
+      <div class="grid">
+        <div class="card">
+          <h3>Energy Healing &amp; Manifestation</h3>
+          <p class="meta">Heal from trauma • Unlock love &amp; abundance</p>
+          <p>
+            A 1:1 session with me designed to help clear energetic blockages, cut cords, manifest love &amp; abundance, and heal from emotional and physical issues.
+          </p>
+          <ul>
+            <li>Help heal from emotional &amp; physical wounds</li>
+            <li>Cut toxic ties holding you back</li>
+            <li>Help manifest love &amp; abundance</li>
+          </ul>
+          <div class="btnrow">
+            <a class="btn" href="https://calendly.com/theesotericnomad/30min">Book 30 min ($60)</a>
+            <a class="btn" href="https://calendly.com/theesotericnomad/1-hour-1-1-meeting">Book 60 min ($100)</a>
+          </div>
+        </div>
+
+        <div class="card">
+          <h3>Beyond Quantum Healing Hypnosis</h3>
+          <p class="meta">Connect with your higher self • Learn your soul mission</p>
+          <p>
+            A hypnosis session to help you connect with your higher self to receive healing as well as to gain clarity on your life purpose. I’m an accredited practitioner.
+          </p>
+          <ul>
+            <li>Ask questions to your higher self</li>
+            <li>Help understand your soul mission</li>
+            <li>Help understand what's blocking you from abundance</li>
+          </ul>
+          <a class="btn" href="https://calendly.com/theesotericnomad/beyond-quantum-healing-hypnosis-session">Book BQH Session ($444)</a>
+          <p style="margin-top:10px; color:var(--muted); font-size:14px;">
+            Normally lasts 2-4 hours.
+          </p>
+        </div>
+
+        <div class="card">
+          <h3>Soul Purpose Mentorship (Long-Term)</h3>
+          <p class="meta">BQH + shadow work • deprogramming • manifestation alignment • <strong>by application</strong></p>
+          <p>
+            A longer-term mentorship combining Beyond Quantum Healing (BQH) sessions with ongoing support to clear subconscious blocks, integrate shadow material, heal emotional wounds, and step into a clear, soul-aligned life direction.
+          </p>
+          <ul>
+            <li>Start with BQH for clarity</li>
+            <li>Ongoing integration, shadow work, &amp; healing</li>
+            <li>Deprogramming &amp; manifestation techniques</li>
+            <li><em>Optional:</em> If you're a <strong class="creator">creator</strong> (or wish to be one), I can also help translate your clarity into a consistent content creation plan that is geared to succeed.</li>
+          </ul>
+          <a class="btn" href="https://calendly.com/theesotericnomad/soul-purpose-mentorship-fit-call">Apply for Mentorship</a>
+        </div>
+      </div>
+    </section>
+
+    <section id="testimonials">
+      <h2>Testimonials</h2>
+      <div class="gallery">
+        <div class="thumb"><img alt="Client feedback screenshot" src="assets/review1.png"/><div class="caption">“Man I really feel better now. Thank you again!”</div></div>
+        <div class="thumb"><img alt="Client feedback screenshot" src="assets/review2.png"/><div class="caption">"I'm fascinated by this as I feel so good."</div></div>
+        <div class="thumb"><img alt="Client feedback screenshot" src="assets/review3.png"/><div class="caption">"I do feel much happier now, more relaxed too. I started visualizing a few things as well."</div></div>
+        <div class="thumb"><img alt="Client feedback screenshot" src="assets/review4.png"/><div class="caption">"I really needed your help today. Thank you for making time, I feel a lot better and clear minded."</div></div>
+        <div class="thumb"><img alt="Client feedback screenshot" src="assets/review5.png"/><div class="caption">"So far my mood is boosted and I did well on my two college exams."</div></div>
+        <div class="thumb"><img alt="Client feedback screenshot" src="assets/review6.png"/><div class="caption">“You definitely have a gift.”</div></div>
+      </div>
+    </section>
+
+    <section id="credentials">
+      <h2>Credentials</h2>
+
+      <div class="credrow">
+        <div class="certbox">
+          <img class="certimg" src="assets/BQH_Certificate.jpg" alt="BQH Certificate" />
+        </div>
+        <div class="card">
+          <h3>BQH Accreditation</h3>
+          <p class="meta">Beyond Quantum Healing (BQH) — Certificate of Completion</p>
+        </div>
+      </div>
+
+      <div class="credrow">
+        <div class="certbox certbox--reiki">
+          <img class="certimg" src="assets/Reiki_Certificate.png" alt="Reiki Certificate" />
+        </div>
+        <div class="card">
+          <h3>Reiki Certificate</h3>
+          <p class="meta">While I do not use standardized Reiki methods as a formal system in my work, I have received Reiki Level I training and attunement.</p>
+        </div>
+      </div>
+    </section>
+
+    <footer>
+      <div>
+        <strong>Nathan Soufer</strong><br/>
+        Energy Healing &amp; Soul Alignment
+      </div>
+      <div>© <span id="year"></span></div>
+    </footer>
+  </main>
+
+  <script>
+    document.getElementById("year").textContent = new Date().getFullYear();
+  </script>
 </body>
 </html>
