--- a/index.html
+++ b/index.html
@@ -289,8 +289,8 @@
             <li>Help manifest love &amp; abundance</li>
           </ul>
           <div class="btnrow">
-            <a class="btn" href="https://calendly.com/theesotericnomad/30min">Book 30 min ($60)</a>
-            <a class="btn" href="https://calendly.com/theesotericnomad/1-hour-1-1-meeting">Book 60 min ($99)</a>
+            <a class="btn" href="https://calendly.com/theesotericnomad/30min">Book 30 in ($60)</a>
+            <a class="btn" href="https://calendly.com/theesotericnomad/1-hour-1-1-meeting">Book 60 Min ($99)</a>
           </div>
         </div>
 
@@ -315,7 +315,7 @@
           <h3>Soul Purpose Mentorship (Long-Term)</h3>
           <p class="meta">BQH + shadow work • deprogramming • manifestation alignment • <strong>by application</strong></p>
           <p>
-            A longer-term mentorship combining Beyond Quantum Healing (BQH) sessions with ongoing support to clear subconscious blocks, integrate shadow material, heal emotional wounds, and step into a clear, soul-aligned life direction.
+            A longer-term mentorship combining Beyond Quantum Healing (BQH) sessions with ongoing support to clear subconscious blocks, integrate shadow material, heal emotional wounds, and step into a clear, soul-aligned life direction. There’s also a <b>content creation</b> option for those who want to <b>build an audience</b> and <b>monetize</b> their mission.
           </p>
           <ul>
             <li>Start with BQH for clarity</li>
