--- a/index.html
+++ b/index.html
@@ -289,8 +289,8 @@
             <li>Help manifest love &amp; abundance</li>
           </ul>
           <div class="btnrow">
-            <a class="btn" href="https://calendly.com/theesotericnomad/30min">Book 30 in ($60)</a>
-            <a class="btn" href="https://calendly.com/theesotericnomad/1-hour-1-1-meeting">Book 60 Min ($99)</a>
+            <a class="btn" href="https://calendly.com/theesotericnomad/30min">Book 30 min ($60)</a>
+            <a class="btn" href="https://calendly.com/theesotericnomad/1-hour-1-1-meeting">Book 60 min ($99)</a>
           </div>
         </div>
 
