--- a/index.html
+++ b/index.html
@@ -91,7 +91,6 @@
       display:grid;
       grid-template-columns:1fr 1fr;
       gap:16px;
-      align-items:stretch; /* ensures equal heights per row */
     }
     @media(max-width:800px){
       .grid{grid-template-columns:1fr}
@@ -103,11 +102,6 @@
       padding:20px;
       background:#fff;
       box-shadow:var(--shadow);
-
-      /* make all cards equal-height + allow buttons to sit at bottom */
-      display:flex;
-      flex-direction:column;
-      height:100%;
     }
 
     .meta{color:var(--muted); font-size:14px}
@@ -146,9 +140,6 @@
       flex-wrap:wrap;
       margin-top:10px;
     }
-
-    /* push CTA area to bottom for consistent alignment */
-    .push{ margin-top:auto; }
 
     footer{
       margin-top:72px;
@@ -247,7 +238,12 @@
       transform-origin: center;
     }
 
-    /* REMOVED: last card spanning both columns */
+    /* Make the last Services card span both columns for an even layout */
+    #services .grid > .card:last-child{
+      grid-column: 1 / -1;
+      max-width: 760px;
+      justify-self: center;
+    }
   </style>
 </head>
 
@@ -292,7 +288,7 @@
             <li>Cut toxic ties holding you back</li>
             <li>Help manifest love &amp; abundance</li>
           </ul>
-          <div class="btnrow push">
+          <div class="btnrow">
             <a class="btn" href="https://calendly.com/theesotericnomad/30min">Book 30 min ($60)</a>
             <a class="btn" href="https://calendly.com/theesotericnomad/1-hour-1-1-meeting">Book 60 min ($99)</a>
           </div>
@@ -309,48 +305,22 @@
             <li>Help understand your soul mission</li>
             <li>Help understand what's blocking you from abundance</li>
           </ul>
-
-          <div class="push">
-            <div class="btnrow">
-              <a class="btn" href="https://calendly.com/theesotericnomad/beyond-quantum-healing-hypnosis-session">Book BQH Session ($444)</a>
-            </div>
-            <p style="margin-top:10px; color:var(--muted); font-size:14px;">
-              Normally lasts 2-4 hours.
-            </p>
-          </div>
-        </div>
-
-        <!-- NEW 3rd CARD -->
-        <div class="card">
-          <h3>Psychic Reading</h3>
-          <p class="meta">Direct clarity • Quick answers • Spiritual guidance</p>
-          <p>
-            A focused psychic divination reading (using the I-Ching) for clear guidance on a situation or decision.
+          <a class="btn" href="https://calendly.com/theesotericnomad/beyond-quantum-healing-hypnosis-session">Book BQH Session ($444)</a>
+          <p style="margin-top:10px; color:var(--muted); font-size:14px;">
+            Normally lasts 2-4 hours.
           </p>
-          <ul>
-            <li>Clarity on relationships, career, or life direction</li>
-            <li>Advice on how to handle your situation</li>
-            <li>Fast, direct answers & guidance</li>
-          </ul>
-
-          <div class="btnrow push">
-            <a class="btn" href="https://tally.so/r/A7vz5D">1 Question ($15)</a>
-            <a class="btn" href="https://tally.so/r/ODGagR">3 Questions ($30)</a>
-          </div>
         </div>
 
-        <!-- MENTORSHIP MOVED TO LAST -->
         <div class="card">
           <h3>Soul Purpose Mentorship (Long-Term)</h3>
           <p class="meta">BQH • shadow work • deprogramming • manifestation techniques</p>
           <p>
-            A longer-term mentorship combining Beyond Quantum Healing (BQH) sessions with ongoing support to clear subconscious blocks, integrate shadow material, heal emotional wounds, and manifest your soul purpose. There’s also a <b>content creation</b> option for those who want to <b>build an audience</b> and <b>monetize</b> their mission.
+            A longer-term mentorship to clear subconscious blocks, integrate shadow material, heal emotional wounds, and manifest your soul purpose. There’s also a <b>content creation</b> option for those who want to <b>build an audience</b> and <b>monetize</b> their mission.
           </p>
           <div class="btnrow push">
             <a class="btn" href="https://calendly.com/theesotericnomad/soul-purpose-mentorship-fit-call">Apply for Mentorship</a>
           </div>
         </div>
-
       </div>
     </section>
 
